force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/Investigation__c.object-meta.xml
<CustomObject>
    <label>Investigation</label>
    <nameField>
        <label>Investigation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>