force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/fields/Days_To_Completion__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Completion__c</fullName>
    <formula>DATEVALUE(End_Date__c) - DATEVALUE(Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>