force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date when the investigation was concluded.</description>
    <inlineHelpText>Date when the investigation was concluded.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>