force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/fields/Investigation_Details__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Details__c</fullName>
    <description
  >Detailed notes and findings from the investigation.</description>
    <inlineHelpText
  >Detailed notes and findings from the investigation.</inlineHelpText>
    <label>Investigation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>