force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/fields/Investigator__c.field-meta.xml
<CustomField>
    <fullName>Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The user or team responsible for the investigation.</description>
    <inlineHelpText
  >The user or team responsible for the investigation.</inlineHelpText>
    <label>Investigator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>