force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date/time when the investigation started.</description>
    <inlineHelpText>Date/time when the investigation started.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>