force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Evaluation</fullName>
            </value>
            <value>
                <fullName>Awaiting Evidence Documents</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Inconclusive</fullName>
            </value>
            <value>
                <fullName>Substantial</fullName>
            </value>
            <value>
                <fullName>Unsubstantial</fullName>
            </value>
            <value>
                <fullName>Awaiting Legal Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>