force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Investigator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>