force-app/main/Investigations/Whistleblower_Management/objects/Investigation__c/listViews/My_Investigations.listView-meta.xml
<ListView>
    <fullName>My_Investigations</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Investigator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Has_Access__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Investigations</label>
</ListView>